[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ccxt-bullish"
version = "0.01"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers"
]

dependencies = [
    'eosio-signer@git+https://github.com/bullish-exchange/python-signer',
    'websocket-client>=1.3.1',
    'requests>=2.25.1',
    'python-dotenv>=1.0.0',
    'ccxt>=4.2.78',
    'pytest>=8.1.1',
    'pytest-mock>=3.14.0',
    'schema>=0.7.5',
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]